# constraint-theory-llvm

./: Cargo.toml  FM-THROUGH-FIELD-LENS.md  JOURNEY.md  OPEN-QUESTIONS.md  README.md  SPEC.md  WORKSHOP.md
.github/workflows/: ci.yml
benches/: analog_benchmark.rs
examples/: sat_trace.rs
fleet-messages/: 2026-05-05-GPU-VERIFICATION-COORDINATION.md
gpu-verification/: TASK-FM-GPU-BENCHMARK.md
gpu-verification/results/: FM-BENCHMARK-2026-05-06.md  SPLINE-THEOREMS.md
src/: analog_compute.rs  arm_timing.rs  constraint_field.rs  emitter.rs  emitter_x86.rs  field_emitter.rs  jit.rs  lib.rs  mythos_emitter.rs  mythos_emitter_neon.rs  mythos_mesh.rs  optimizer.rs  plato_mythos_kernel.rs  trace.rs  ttl_constraint.rs  universal_isa.rs
tests/: analog_benchmark.rs  analog_deep_experiments.rs  analog_verify_test.rs  cdcl_trace_test.rs  field_experiments.rs  integration_test.rs  jit_integration_test.rs
